2021-07-25  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.16

	- Add PAGE_SIZE constant.
	- Compatibility to the C++ library: Tkrzw 0.9.47

2021-07-23  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.15

	- Add IsWritable method.

2021-07-14  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.14

	- Add AppendMulti method.
	- Compatibility to the C++ library: Tkrzw 0.9.43

2021-07-12  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.13

	- Add exporting methods to the flat record file.
	- Compatibility to the C++ library: Tkrzw 0.9.42

2021-07-08  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.12

	- Modify DBM::Search for the latest C++ API.
	- Compatibility to the C++ library: Tkrzw 0.9.40

2021-07-05  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.11

	- The restoreDatabase method is added.
	- TextFile is renamed to File.
	- Compatibility to the C++ library: Tkrzw 0.9.38

2021-06-02  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.10

	- Add CompareExchangeMulti method.

2021-05-29  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.9

	- Add getMulti, setMulti, and removeMulti methods.
	- compareExchange supports expectation for missing records.
	- Compatibility to the C++ library: Tkrzw 0.9.21

2021-05-16  Mikio Hirabayashi  <hirarin@gmail.com>

	- Release: 0.1.8

	- Supports tunning parameters of Direct I/O.
	- Compatibility to the C++ library: Tkrzw 0.9.17